--- a/Singapore/commentsection.css
+++ b/Singapore/commentsection.css
@@ -1,3 +1,4 @@
+/* Yuet Lin */
 /* Styles for the main container */
 .main-container {
   /* Set the height of the container to fill the viewport */
