--- a/usa/commentsection.css
+++ b/usa/commentsection.css
@@ -1,54 +1,54 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background-color: #ffffff;
-  }
-  
-  .main-container {
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-end;
-    align-items: center;
-    margin-top: -200px;
-  }
-  
-  .comment-flexbox {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  
-  .comment-text {
-    margin: 12px 0;
-    font-size: 1.15rem;
-    font-weight: 600;
-  }
-  
-  .input-box {
-    height: 75px;
-    width: 465px;
-    background-color: #ececec;
-  }
-  
-  .comment-button {
-    height: 40px;
-    width: 80px;
-    background-color: #1b0fff;
-    color: white;
-    font-size: 1.05rem;
-    margin-top: 10px;
-    border-radius: 5px;
-    border-style: none;
-    cursor: pointer;
-  }
-  
-  .comment-container {
-    height: 75px;
-    width: 465px;
-    background-color: #ececec;
-    border-radius: 5px;
-    margin: 10px 0;
-    word-break: break-all;
-  }
+/* Yuet Lin */
+/* Styles for the main container */
+.main-container {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  align-items: center;
+  margin-top: -200px;
+}
+
+/* Styles for the flexbox containing comments */
+.comment-flexbox {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+/* Styles for the text of comments */
+.comment-text {
+  margin: 12px 0;
+  font-size: 1.15rem;
+  font-weight: 600;
+}
+
+/* Styles for the input box for adding comments */
+.input-box {
+  height: 75px;
+  width: 465px;
+  background-color: #ececec;
+}
+
+/* Styles for the button to submit comments */
+.comment-button {
+  height: 40px;
+  width: 80px;
+  background-color: #1b0fff;
+  color: white;
+  font-size: 1.05rem;
+  margin-top: 10px;
+  border-radius: 5px;
+  border-style: none;
+  cursor: pointer;
+}
+
+/* Styles for the container of each comment */
+.comment-container {
+  height: 75px;
+  width: 465px;
+  background-color: #ececec;
+  border-radius: 5px;
+  margin: 10px 0;
+  word-break: break-all;
+}
